[package]
name = "L0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde_json = "1.0.128"
tokio = { version = "1.40.0" , features = ["rt-multi-thread"]}
serde = { version = "1.0.210", features = ["derive"] }
tokio-postgres = {version = "0.7.11",features = ["with-chrono-0_4"]}
chrono = { version = "0.4.38", features = ["serde"] }